feat: CRUD finalizado
